--- a/styles/scss/base/_body.scss
+++ b/styles/scss/base/_body.scss
@@ -3,5 +3,5 @@ body {
   line-height: 1.65;
   background-color: var(--colour-body-bg);
   color: var(--colour-text);
-  min-width: 320px;
+  min-width: 360px;
 }
