--- a/styles/scss/base/_html.scss
+++ b/styles/scss/base/_html.scss
@@ -1,4 +1,6 @@
-html {font-size: 100%;} // 16px
+html {
+  font-size: 100%; // 16px
+}
 
 *{
   &,
